# Barnes2019-Landscape

./: .gitignore  CMakeLists.txt  CumulativeTimer.cpp  CumulativeTimer.hpp  FastScapeMin.f90  Makefile  Makefile.cori  README.md  Timer.cpp  Timer.hpp  compare.sh  draw_stuff.hpp  fastscape_BW+P.cpp  fastscape_BW+PI.cpp  fastscape_BW+PI.hpp  fastscape_BW+PQ.cpp  fastscape_BW+TP.cpp  fastscape_BW.cpp  fastscape_BW_functions.cpp  fastscape_RB+GPU-b.cpp  fastscape_RB+GPU-c.cpp  fastscape_RB+GPU-gang-indep-openmp.cpp  fastscape_RB+GPU-gang-indep.cpp  fastscape_RB+GPU.cpp  fastscape_RB+GPU.hpp  fastscape_RB+P.cpp  fastscape_RB+PI.cpp  fastscape_RB+PI.hpp  fastscape_RB+PQ+GPU.cpp  fastscape_RB+PQ.cpp  fastscape_RB+PQ.hpp  fastscape_RB.cpp  fastscape_RB.hpp  fastscape_openacc0.cpp  fastscape_openacc1.cpp  fastscape_openacc2.cpp  fastscape_openacc3.cpp  fastscape_openmp0.cpp  fastscape_openmp1.cpp  fastscape_openmp_knl_hack.cpp  (+7 more)
src/: FastScapeMin.f90  Makefile  Makefile.summitdev  README.md  fastscape_BW+P.cpp  fastscape_BW+P.hpp  fastscape_BW+PI.hpp  fastscape_BW.cpp  fastscape_BW.hpp  fastscape_RB+GPU-graph.cpp  fastscape_RB+GPU-graph.hpp  fastscape_RB+GPU-openmp-wo-order.cpp  fastscape_RB+GPU-openmp.cpp  fastscape_RB+GPU-openmp.hpp  fastscape_RB+GPU.cpp  fastscape_RB+GPU.hpp  fastscape_RB+P.cpp  fastscape_RB+P.hpp  fastscape_RB+PI.cpp  fastscape_RB+PI.hpp  fastscape_RB+PQ.hpp  fastscape_RB.hpp  main.cpp
src/tests/: analysis.R  summitdev
tests/: .gitignore  analysis.R  comet  d.make_tabular  tests.sh
